<resources>
    <string name="app_name">ZT_orders</string>
    <string name="edSurname">Введите E-mail</string>
    <string name="edPassword">Введите пароль</string>
    <string name="btn_SignIn">Войти</string>
    <string name="btn_SignOut">Выйти</string>
    <string name="btn_Start">Начать работу</string>
    <string name="ZT">ZT Lazer</string>
    <string name="ZT2">мастерская</string>
    <string name="autorization">Авторизация</string>
    <string name="item1">Насущное</string>
    <string name="item4">Закрыть</string>
    <string name="item2">Добавить заказ</string>
    <string name="item3">Архив заказов</string>
    <string name="item5">История доходов</string>
    <string name="item7">История расходов</string>
    <string name="item6">Добавить расход</string>
    <string name="add">Принять</string>
    <string name="toArchive">В архив</string>
    <string name="close">Закрыть</string>
    <string name="cancel">Отмена</string>
    <string name="reset">Восстановить</string>
    <string name="name_product">Наименование изделия</string>
    <string name="material_product">Материал изготовления</string>
    <string name="price">Стоимость (рубли)</string>
    <string name="fio_cuctomer">ФИО заказчика</string>
    <string name="accepted_date">Дата принятия заказа</string>
    <string name="executed_date">Дата исполнения</string>
    <string name="fio_worker">ФИО принявшего заказ</string>
    <string name="expense_fio_worker">ФИО потратившего деньги:</string>
    <string name="readiness">Степень готовности</string>
    <string name="comment">Комментарий к заказу</string>
    <string name="search_hint">Поиск</string>
    <string name="prepay">Предоплата</string>
    <string name="cat1">Работа</string>
    <string name="cat2">Финансы</string>
    <string name="id">Заказ № </string>
    <string name="expense_date">Дата проведения расхода:</string>
    <string name="expense_name">Наименование расхода:</string>
    <string name="expense_summ">Сумма средств (рубли): </string>
    <string name="bank">Сейчас в банке: </string>
    <string name="first_degree">Принят в работу</string>
    <string name="second_degree">Разработан макет</string>
    <string name="third_degree">Вырезан</string>
    <string name="fourth_degree">Готов к покраске</string>
    <string name="fifth_degree">Передан курьеру</string>
    <string name="sixth_degree">Передан заказчику</string>
    <string name="half">50%</string>
    <string name="full">100%</string>
    <string name="trofimov">Трофимов Виктор</string>
    <string name="trofimova">Трофимова Анастасия</string>
    <string name="zarapin">Зарапин Алексей</string>
    <string name="zarapina">Зарапина Анастасия</string>
    <string name="addimage">Добавить картинку</string>
    <string name="addphoto">Добавить фото чека</string>

</resources>