<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
        android:id="@+id/closeNavMenu"
        android:title="@string/item4"
        android:icon="@drawable/mr_media_play_light"
        android:onClick="onCloseNavMenuClick"/>
<!--        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"-->

    </group>

    <item android:title="@string/cat1">
        <menu>
        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/ordersInWork"
                android:onClick="onOrdersInWorkClick"
                android:title="@string/item1"/>
            <item
                android:id="@+id/addOrder"
                android:onClick="onAddOrderClick"
                android:title="@string/item2"/>
            <item
                android:id="@+id/archiveFiles"
                android:onClick="onArchiveFilesClick"
                android:title="@string/item3"/>
        </group>
        </menu>
    </item>

    <item android:title="@string/cat2">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/profit"
                    android:onClick="onProfitClick"
                    android:title="@string/item5"/>

                <item
                    android:id="@+id/add_expense"
                    android:onClick="onAddExpenseClick"
                    android:title="@string/item6"/>

                <item
                    android:id="@+id/expenses"
                    android:onClick="onExpensesClick"
                    android:title="@string/item7"/>

            </group>
        </menu>
    </item>


</menu>