<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bankLayoutArchive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/platinum"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/volkhov"
            android:text="@string/bank"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/summInBankArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/volkhov"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/name_product"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archive_NameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/material_product"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archive_materialProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/price"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archive_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/prepay"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archive_prepay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/fio_cuctomer"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/archive_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/accepted_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/accDate_archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/executed_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/execDate_archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/fio_worker"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/worker_archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/volkhov"
                android:text="@string/comment"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/comment_archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/agat_grey"
                android:fontFamily="@font/volkhov"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:orientation="horizontal">-->

            <Button
                android:id="@+id/btn_Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/volkhov"
                android:onClick="onClickReset"
                android:text="@string/reset"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <!--                <Button-->
            <!--                    android:id="@+id/btn_CancelAddOrder"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginLeft="10dp"-->
            <!--                    android:layout_marginRight="10dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:fontFamily="@font/volkhov"-->
            <!--                    android:onClick="onCLickCancel"-->
            <!--                    android:text="@string/cancel"-->
            <!--                    android:textSize="18sp"-->
            <!--                    tools:ignore="ButtonStyle" />-->
            <!--            </LinearLayout>-->


        </LinearLayout>
    </ScrollView>

</LinearLayout>